--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
 
     //custom progress bar with percentage
     implementation 'com.wssholmes.stark:circular-score:0.1.1'
+    implementation 'com.github.rehmanmuradali:ticker:1.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
