--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,9 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar"
         tools:ignore="GoogleAppIndexingWarning"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:replace="android:icon,android:theme">
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity
             android:name=".PostVerifiedOtpScreen"
             android:label="Verify OTP"
