--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
     <application
         android:name=".entities.AndMedical_App_Global"
         android:allowBackup="true"
-        android:icon="@mipmap/applogo"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar"
         tools:ignore="GoogleAppIndexingWarning"
