--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
 
     implementation 'com.mcxiaoke.volley:library:1.0.19'
 
-    compile 'com.jiechic.library:xUtils:2.6.14'
+    implementation 'com.jiechic.library:xUtils:2.6.14'
     implementation 'com.wang.avi:library:2.1.3'
     compile(name:'c208blelibrary', ext:'aar')
 
