--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -153,11 +153,11 @@
 
         </activity>
         <activity
-            android:name="com.abhaybmicoc.app.actofitheight.ActofitMainActivity"
+            android:name="com.abhaybmicoc.app.activity.ActofitMainActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppThemeAction" />
         <activity
-            android:name="com.abhaybmicoc.app.actofitheight.DisplayRecord"
+            android:name="com.abhaybmicoc.app.screen.DisplayRecordScreen"
             android:label="Weight Details"
             android:screenOrientation="landscape"
             android:theme="@style/AppThemeAction" />
